[gd_scene load_steps=3 format=2]

[ext_resource path="res://QrCode.gd" type="Script" id=1]
[ext_resource path="res://Test.gd" type="Script" id=2]

[node name="Test" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="QrCode" type="Sprite" parent="."]
position = Vector2( 250, 250 )
scale = Vector2( 10, 10 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 20 )
text = "www.wikipedia.org"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_left = 204.0
margin_right = 318.0
margin_bottom = 20.0
text = "Generate 30x30"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
